Temp fix category sort order

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,10 @@ title: Portfolio
 <p>I have much to add here. Please check back if you're interested in seeing some of the work I have done!</p>
 </div>
 
-{% assign portfolio = site.portfolio | group_by:"category" %}
-{% for category in portfolio %}
+{% assign portfolio = site.portfolio | sort:"category" | group_by:"category" %}
+{% for category in portfolio reversed %}
   {% assign works = category.items | where:"draft",false %}
-  {% if works.size >0 %}
+  {% if works.size > 0 %}
   <div class="category">
     <header class="category-header">
       <h1>{{ category.name }}</h1>
