Update disclaimer text

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@ title: Portfolio
 ---
 
 <div class="notice">
-<p>I have much to add here. Please check back if you're interested in seeing some of the work I have done!</p>
+<p style="text-align:center;">Thanks for checking out my portfolio! From time to time I add new entries, so please check back occasionally to see more, and do not hesitate to contact me if you have any questions!</p>
 </div>
 
 {% assign portfolio = site.portfolio | sort:"category" | group_by:"category" %}
